--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "swr": "^0.2.0"
   },
   "scripts": {
     "dev": "next",
