--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Eli <eli.i.pleaner@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.4",
     "react": "^16.13.1",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
+    "babel-plugin-emotion": "^10.0.33",
     "now": "^17.1.1",
     "typescript": "^3.8.3"
   }
