--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@theme-ui/typography": "^0.3.0",
+    "deepmerge": "^4.2.2",
+    "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-style-reset": "^1.3.1",
     "swr": "^0.2.0",
-    "theme-ui": "^0.3.1"
+    "theme-ui": "^0.3.1",
+    "typography-theme-fairy-gates": "^0.16.19"
   },
   "scripts": {
     "dev": "next",
