--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^9.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.9.0",
     "react-style-reset": "^1.3.1",
     "swr": "^0.2.0",
     "theme-ui": "^0.3.1",
