--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
+    "@types/theme-ui": "^0.3.1",
     "babel-plugin-emotion": "^10.0.33",
     "now": "^17.1.1",
     "typescript": "^3.8.3"
