Adding auth using auth0, express, and passport

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
       "plugins": ["emotion"]
     },
     "development": {
-      "plugins": [["emotion", { "sourceMap": true }]]
+      "plugins": [["emotion"]]
     }
   }
 }
