--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@theme-ui/typography": "^0.3.0",
+    "body-parser": "^1.19.0",
     "deepmerge": "^4.2.2",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
-    "isomorphic-unfetch": "^3.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "isomorphic-fetch": "^2.2.1",
     "next": "^9.3.4",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.3.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-style-reset": "^1.3.1",
     "swr": "^0.2.0",
     "theme-ui": "^0.3.1",
-    "typography-theme-fairy-gates": "^0.16.19"
+    "typography-theme-fairy-gates": "^0.16.19",
+    "uid-safe": "^2.1.5"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "node ./src/server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node ./src/server.js",
     "deploy": "now",
     "deployToProd": "now --prod"
   },
@@ -34,6 +40,8 @@
     "@types/react": "^16.9.32",
     "@types/theme-ui": "^0.3.1",
     "babel-plugin-emotion": "^10.0.33",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "now": "^17.1.1",
     "typescript": "^3.8.3"
   }
