--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@theme-ui/typography": "^0.3.0",
-    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.2.0",
     "deepmerge": "^4.2.2",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-unfetch": "^3.0.0",
+    "mongodb": "^3.5.5",
     "next": "^9.3.4",
+    "next-connect": "^0.6.1",
+    "next-session": "^3.0.1",
     "passport": "^0.4.1",
-    "passport-auth0": "^1.3.2",
+    "passport-local": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
@@ -26,12 +29,12 @@
     "swr": "^0.2.0",
     "theme-ui": "^0.3.1",
     "typography-theme-fairy-gates": "^0.16.19",
-    "uid-safe": "^2.1.5"
+    "validator": "^13.0.0"
   },
   "scripts": {
-    "dev": "node ./src/server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node ./src/server.js",
+    "start": "next start",
     "deploy": "now",
     "deployToProd": "now --prod"
   },
