--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@sendgrid/mail": "^7.0.0",
     "@theme-ui/typography": "^0.3.0",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^3.2.0",
