--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@middleware/*": ["src/middleware/*"],
       "@hooks/*": ["src/hooks/*"],
       "@lib/*": ["src/lib/*"],
-      "@styles/*": ["src/styles/*"]
+      "@styles/*": ["src/styles/*"],
+      "@static/*": ["src/static/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
