--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "chroma-js": "^2.1.0",
     "connect-mongo": "^3.2.0",
+    "d3": "^5.15.1",
     "deepmerge": "^4.2.2",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
@@ -27,6 +28,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
+    "react-spring": "^8.0.27",
     "react-style-reset": "^1.3.1",
     "swr": "^0.2.0",
     "theme-ui": "^0.3.1",
