--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Eli <eli.i.pleaner@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@chakra-ui/core": "^0.7.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@sendgrid/mail": "^7.0.0",
