--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
+    "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
     "mongodb": "^3.5.5",
     "next": "^9.3.4",
