--- a/package.json
+++ b/package.json
@@ -51,10 +51,15 @@
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
     "@types/theme-ui": "^0.3.1",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
     "babel-plugin-emotion": "^10.0.33",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
-    "now": "^18.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "now": "^19.0.1",
     "typescript": "^3.8.3"
   }
 }
