--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "chroma-js": "^2.1.0",
     "connect-mongo": "^3.2.0",
     "d3": "^5.15.1",
+    "d3-array": "^2.4.0",
+    "d3-ease": "^1.0.6",
+    "d3-selection": "^1.4.1",
+    "d3-timer": "^1.0.10",
+    "d3-transition": "^1.3.2",
     "deepmerge": "^4.2.2",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
@@ -32,6 +37,7 @@
     "react-icons": "^3.9.0",
     "react-spring": "^8.0.27",
     "react-style-reset": "^1.3.1",
+    "react-transition-group": "^4.4.1",
     "swr": "^0.2.0",
     "theme-ui": "^0.3.1",
     "typography-theme-fairy-gates": "^0.16.19",
