--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "bcryptjs": "^2.4.3",
     "chroma-js": "^2.1.0",
     "connect-mongo": "^3.2.0",
-    "d3": "^5.15.1",
     "d3-array": "^2.4.0",
     "d3-ease": "^1.0.6",
+    "d3-hierarchy": "^1.1.9",
+    "d3-interpolate": "^1.4.0",
+    "d3-scale": "^3.2.1",
+    "d3-scale-chromatic": "^1.5.0",
     "d3-selection": "^1.4.1",
+    "d3-shape": "^1.3.7",
     "d3-timer": "^1.0.10",
     "d3-transition": "^1.3.2",
     "deepmerge": "^4.2.2",
