--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "express": "^4.17.1",
     "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "mongodb": "^3.5.5",
     "next": "^9.3.4",
     "next-connect": "^0.6.1",
