--- a/babel.config.json
+++ b/babel.config.json
@@ -1,5 +1,9 @@
 {
   "presets": ["next/babel"],
+  "plugins": [
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }]
+  ],
   "env": {
     "production": {
       "plugins": ["emotion"]
