--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
     "mobx": "^5.15.4",
-    "mobx-react": "^6.2.2",
+    "mobx-react-lite": "^2.0.7",
     "mongodb": "^3.5.5",
     "next": "^9.3.4",
     "next-connect": "^0.6.1",
@@ -60,6 +60,8 @@
     "prod": "now --prod"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-decorators": "^7.10.1",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
     "@types/theme-ui": "^0.3.1",
