--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "d3-selection": "^1.4.1",
     "d3-shape": "^1.3.7",
     "d3-time": "^1.1.0",
+    "d3-time-format": "^2.2.3",
     "d3-timer": "^1.0.10",
     "d3-transition": "^1.3.2",
     "deepmerge": "^4.2.2",
@@ -34,8 +35,10 @@
     "express": "^4.17.1",
     "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
+    "lodash.uniq": "^4.5.0",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.7",
+    "moment": "^2.27.0",
     "mongodb": "^3.5.5",
     "next": "^9.3.4",
     "next-connect": "^0.6.1",
