--- a/package.json
+++ b/package.json
@@ -58,13 +58,14 @@
     "yup": "^0.28.4"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "yarn start",
     "start": "now dev",
     "build": "next build",
     "serve": "next start",
     "env": "now env pull",
     "now": "now",
-    "prod": "now --prod"
+    "prod": "now --prod",
+    "seed": "node src/helpers/db/seed"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.1",
@@ -80,7 +81,8 @@
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.0.0",
-    "now": "^19.0.1",
+    "faker": "^4.1.0",
+    "now": "^19.1.1",
     "typescript": "^3.8.3"
   }
 }
