--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^0.7.0",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
+    "@chakra-ui/theme-tools": "^1.0.0-next.3",
     "@sendgrid/mail": "^7.0.0",
     "@theme-ui/typography": "^0.3.0",
     "bcryptjs": "^2.4.3",
@@ -43,8 +42,6 @@
     "d3-timer": "^1.0.10",
     "d3-transition": "^1.3.2",
     "deepmerge": "^4.2.2",
-    "emotion": "^10.0.27",
-    "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
     "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
