--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Eli <eli.i.pleaner@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "yarn start",
-    "start": "now dev",
+    "start:remote": "now dev",
+    "start": "next dev",
     "build": "next build",
     "serve": "next start",
     "test": "jest",
@@ -46,9 +46,11 @@
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
     "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
     "lodash.uniq": "^4.5.0",
+    "mailgun.js": "^3.5.5",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.7",
     "moment": "^2.27.0",
