fix: abstract sending email

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
-SENDGRID_API_KEY=
-EMAIL_FROM=
+MAIL_API_KEY=
+MAIL_DOMAIN=
+MAIL_FROM=
+MAIL_SERVICE= # "sendgrid" or "mailgun"
+MAIL_HOST_URL=
 
 APP_ROOT_URL=
 API_ROOT_URL=
